2008-10-15  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Cameron Zwarich.

        Fixed https://bugs.webkit.org/show_bug.cgi?id=21345
        Start the debugger without reloading the inspected page

        * WebInspector/WebInspector.mm:
        (-[WebInspector startDebuggingJavaScript:]): Updated for rename.

2008-10-14  Maxime Britto  <britto@apple.com>

        Reviewed by Darin Adler.

        Added SPI to use WebCore's TextIterator with WebKit.

        * WebView/WebTextIterator.h: Added.
        * WebView/WebTextIterator.mm: Added.
        (-[WebTextIteratorPrivate dealloc]):
        (-[WebTextIterator dealloc]):
        (-[WebTextIterator initWithRange:]): Creates a TextIterator 
        instance
        (-[WebTextIterator advance]): Asks the iterator to advance() .
        (-[WebTextIterator currentNode]): Returns the current DOMNode from 
        the iterator
        (-[WebTextIterator currentText]): Returns the current text from the 
        iterator
        (-[WebTextIterator atEnd]): Indicated whether the iterator has 
        reached the end of the range.
        * WebView/WebView.h:
        * WebView/WebView.mm:
        (-[WebView textIteratorForRect:]): Returns a WebTextIterator with 
        the DOMRange contained in the rectangle given as a parameter.

2008-10-15  Timothy Hatcher  <timothy@apple.com>

        Clean up user agent generation to simplify the _standardUserAgentWithApplicationName:
        class method to not require a WebKit version.

        Reviewed by Darin Adler.

        * WebView/WebView.mm:
        (+[WebView _standardUserAgentWithApplicationName:]): Create the WebKit version.
        (-[WebView WebCore::_userAgentForURL:]): Use the simplified _standardUserAgentWithApplicationName:.
        Remove code that created the WebKit version.
        * WebView/WebViewPrivate.h: Change the method name of _standardUserAgentWithApplicationName:.

2008-10-14  Timothy Hatcher  <timothy@apple.com>
